@@ -6,6 +6,7 @@ This file documents the revision history for the Monitoring Webinterface Thruk.
           - fixed menu scrollbar
           - fixed nav hider on main.html
           - fixed parsing dates
+          - fixed filter combination "livestatus: Cannot combine 2 filters with 'OR': only 0 are on stack"
 
 0.50    Fri Mar 19 20:11:48 CET 2010
           - added next/last check filter
